Prevent blog post dates wrapping on narrow screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -395,6 +395,7 @@ mark {
 
 .post-list .post-item .meta {
     padding-right: 1.5em;
+    flex-shrink: 0;
 }
 
 /* Shortcode: recentposts */
